--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,15 +1,78 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-	<meta charset="UTF-8">
-	<title>Fitness Center</title>
-</head>
-<body>
-	<div style="text-align: center">
+{%extends 'base.html' %} 
+{%load static%}
+{%block content%}
+	
+
+	<!-- Full Page Image Background Carousel Header -->
+    <header id="myCarousel" class="carousel slide">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for Slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <!-- Set the first background image using inline CSS below. -->
+                <div>
+                	<img class="img-responsive fill" src="http://img0.es.gtsstatic.com/wallpapers/c9e5386e2acdcbcbbcad4ddc273e6e10_large.jpeg">
+                </div>
+                <div class="carousel-caption">
+                    <h2>Caption 1</h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <div>
+                	<img class="img-responsive fill" src="http://www.practicavida.es/wp-content/uploads/2015/02/NO-PAIN-NO-GAIN.jpg">
+                </div>
+                <div class="carousel-caption">
+                    <h2>Caption 2</h2>
+                </div>
+            </div>
+
+
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <div>
+                	<img class="img-responsive fill" src="http://res.cloudinary.com/db79cecgq/image/upload/c_crop,h_720,w_1440,y_91/c_fill,h_800,w_1600/v1407952710/MejoresCancionesGimnasioNoticias01.jpg">
+                </div>
+                <div class="carousel-caption">
+                    <h2>Caption 3</h2>
+                </div>
+            </div>
+        </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="icon-prev"></span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="icon-next"></span>
+        </a>
+
+    </header>
+
+	<div  class="container" style="text-align: center">
 		<h1>Bienvenido al centro de Administración del Fitness Center</h1>
 		<a href="http://localhost:8000/admin/">
 			<button>Ir al Administrador</button>
 		</a>
 	</div>
-</body>
-</html>
+
+	<div class="container">
+		<img class="img-responsive" src="http://www.practicavida.es/wp-content/uploads/2015/02/NO-PAIN-NO-GAIN.jpg">
+		<br>
+	</div>
+{%endblock content%}
+
+{%block scripts%}
+	 <!-- Script to Activate the Carousel -->
+    <script>
+    $('.carousel').carousel({
+        interval: 5000 //changes the speed
+    })
+    </script>
+{%endblock scripts%}
