--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -20,7 +20,7 @@
                 	<img class="img-responsive fill" src="http://img0.es.gtsstatic.com/wallpapers/c9e5386e2acdcbcbbcad4ddc273e6e10_large.jpeg">
                 </div>
                 <div class="carousel-caption">
-                    <h2>Caption 1</h2>
+                    <h2>¡Tú puedes campeóna!</h2>
                 </div>
             </div>
             <div class="item">
@@ -29,7 +29,7 @@
                 	<img class="img-responsive fill" src="http://www.practicavida.es/wp-content/uploads/2015/02/NO-PAIN-NO-GAIN.jpg">
                 </div>
                 <div class="carousel-caption">
-                    <h2>Caption 2</h2>
+                    <h2>¡Eres el mejor!</h2>
                 </div>
             </div>
 
@@ -40,7 +40,7 @@
                 	<img class="img-responsive fill" src="http://res.cloudinary.com/db79cecgq/image/upload/c_crop,h_720,w_1440,y_91/c_fill,h_800,w_1600/v1407952710/MejoresCancionesGimnasioNoticias01.jpg">
                 </div>
                 <div class="carousel-caption">
-                    <h2>Caption 3</h2>
+                    <h2>¡Esfuerzate carajo!</h2>
                 </div>
             </div>
         </div>
