--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -16,8 +16,12 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div>
-                	<img class="img-responsive fill" src="http://img0.es.gtsstatic.com/wallpapers/c9e5386e2acdcbcbbcad4ddc273e6e10_large.jpeg">
+                <div class="fill" style="background-image:url('http://weightloss24fitness.com/wp-content/uploads/2016/07/Fitness-Model-Yanita-Yancheva-Workout-Motivation-And-Bikini-Hot-Posing.jpg');">
+                	<!--<img class="fill" src="http://planestataldedesarrollo.hidalgo.gob.mx/assets/images/slider/definitiva_2.png">-->
+
+
+                	<!--http://img0.es.gtsstatic.com/wallpapers/c9e5386e2acdcbcbbcad4ddc273e6e10_large.jpeg-->
+                	
                 </div>
                 <div class="carousel-caption">
                     <h2>¡Tú puedes campeóna!</h2>
@@ -25,8 +29,8 @@
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div>
-                	<img class="img-responsive fill" src="http://www.practicavida.es/wp-content/uploads/2015/02/NO-PAIN-NO-GAIN.jpg">
+                <div class="fill" style="background-image:url('http://www.practicavida.es/wp-content/uploads/2015/02/NO-PAIN-NO-GAIN.jpg');">>
+                	<!--<img class="img-responsive fill" src="http://www.practicavida.es/wp-content/uploads/2015/02/NO-PAIN-NO-GAIN.jpg">-->
                 </div>
                 <div class="carousel-caption">
                     <h2>¡Eres el mejor!</h2>
@@ -36,10 +40,11 @@
 
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div>
-                	<img class="img-responsive fill" src="http://res.cloudinary.com/db79cecgq/image/upload/c_crop,h_720,w_1440,y_91/c_fill,h_800,w_1600/v1407952710/MejoresCancionesGimnasioNoticias01.jpg">
+                <div class="fill" style="background-image:url('http://res.cloudinary.com/db79cecgq/image/upload/c_crop,h_720,w_1440,y_91/c_fill,h_800,w_1600/v1407952710/MejoresCancionesGimnasioNoticias01.jpg');">
+                	<!--<img class="img-responsive fill" src="http://res.cloudinary.com/db79cecgq/image/upload/c_crop,h_720,w_1440,y_91/c_fill,h_800,w_1600/v1407952710/MejoresCancionesGimnasioNoticias01.jpg">-->
                 </div>
                 <div class="carousel-caption">
+                	<button>Registrate</button>
                     <h2>¡Esfuerzate carajo!</h2>
                 </div>
             </div>
