--- a/static/css/full-slider.css
+++ b/static/css/full-slider.css
@@ -22,7 +22,7 @@ body {
 /* Background images are set within the HTML using inline CSS, not here */
 
 .fill {
-    width: auto;
+    width: 100%;
     height: 100%;
     background-position: center;
     -webkit-background-size: cover;
