Arreglos en slider

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -16,7 +16,7 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://weightloss24fitness.com/wp-content/uploads/2016/07/Fitness-Model-Yanita-Yancheva-Workout-Motivation-And-Bikini-Hot-Posing.jpg');">
+                <div class="fill" style="background-image:url('http://3.bp.blogspot.com/-bdZamtvkxtQ/ToXPkv4m0eI/AAAAAAAABWc/oVRNI1Oj838/s1600/HD+EROTIC+%25282%2529.jpg');">
                 	<!--<img class="fill" src="http://planestataldedesarrollo.hidalgo.gob.mx/assets/images/slider/definitiva_2.png">-->
 
 
@@ -24,15 +24,17 @@
                 	
                 </div>
                 <div class="carousel-caption">
+                    <button class="btn-registrar">Registrate</button>
                     <h2>¡Tú puedes campeóna!</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://www.practicavida.es/wp-content/uploads/2015/02/NO-PAIN-NO-GAIN.jpg');">>
+                <div class="fill" style="background-image:url('http://wallpapers-and-backgrounds.net/wp-content/uploads/2016/02/gym-background_1_1920x1200.jpg');">
                 	<!--<img class="img-responsive fill" src="http://www.practicavida.es/wp-content/uploads/2015/02/NO-PAIN-NO-GAIN.jpg">-->
                 </div>
                 <div class="carousel-caption">
+                	<button class="btn-registrar">Registrate</button>
                     <h2>¡Eres el mejor!</h2>
                 </div>
             </div>
@@ -44,7 +46,7 @@
                 	<!--<img class="img-responsive fill" src="http://res.cloudinary.com/db79cecgq/image/upload/c_crop,h_720,w_1440,y_91/c_fill,h_800,w_1600/v1407952710/MejoresCancionesGimnasioNoticias01.jpg">-->
                 </div>
                 <div class="carousel-caption">
-                	<button>Registrate</button>
+                	<button class="btn-registrar">Registrate</button>
                     <h2>¡Esfuerzate carajo!</h2>
                 </div>
             </div>
@@ -63,13 +65,9 @@
 	<div  class="container" style="text-align: center">
 		<h1>Bienvenido al centro de Administración del Fitness Center</h1>
 		<a href="http://localhost:8000/admin/">
-			<button>Ir al Administrador</button>
+			<button class="btn-registrar">Administrador</button>
 		</a>
-	</div>
-
-	<div class="container">
-		<img class="img-responsive" src="http://www.practicavida.es/wp-content/uploads/2015/02/NO-PAIN-NO-GAIN.jpg">
-		<br>
+		
 	</div>
 {%endblock content%}
 
