--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	 <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar  navbar-transparent  navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -24,22 +24,22 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Fitness Center</a>
+                <a class="navbar-brand letras" href="#">Fitness Center</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Clases</a>
+                        <a href="#" class="letras">Clases</a>
                     </li>
                     <li>
-                        <a href="#">Horarios</a>
+                        <a href="#" class="letras">Horarios</a>
                     </li>
                     <li>
-                        <a href="#">Contácto</a>
+                        <a href="#" class="letras">Contácto</a>
                     </li>
                     <li>
-                        <a href="#">Ubicación</a>
+                        <a href="#" class="letras">Ubicación</a>
                     </li>
                 </ul>
             </div>
