--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,9 +1,11 @@
 {%extends 'base.html' %} 
 {%load static%}
-{%block content%}
-	
+{%block head%}
+	<link href="{%static 'css/full-slider.css'%}" rel="stylesheet">
+{%endblock head%}
+{% block content%}
 
-	<!-- Full Page Image Background Carousel Header -->
+<!-- Full Page Image Background Carousel Header -->
     <header id="myCarousel" class="carousel slide">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -16,7 +18,7 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://3.bp.blogspot.com/-bdZamtvkxtQ/ToXPkv4m0eI/AAAAAAAABWc/oVRNI1Oj838/s1600/HD+EROTIC+%25282%2529.jpg');">
+                <div class="fill" style="background-image:url('http://4.bp.blogspot.com/-Pw82pZPeOM0/UzgEa6gCEqI/AAAAAAAAG_w/YjyikuFkEN4/s1600/fitness+11.jpg');">
                 	<!--<img class="fill" src="http://planestataldedesarrollo.hidalgo.gob.mx/assets/images/slider/definitiva_2.png">-->
 
 
@@ -24,8 +26,7 @@
                 	
                 </div>
                 <div class="carousel-caption">
-                    <button class="btn-registrar">Registrate</button>
-                    <h2>¡Tú puedes campeóna!</h2>
+                    <h2 class="sletrero animated zoomInUp">¡DA LO MEJOR DE TÍ CADA DÍA!</h2>
                 </div>
             </div>
             <div class="item">
@@ -34,20 +35,18 @@
                 	<!--<img class="img-responsive fill" src="http://www.practicavida.es/wp-content/uploads/2015/02/NO-PAIN-NO-GAIN.jpg">-->
                 </div>
                 <div class="carousel-caption">
-                	<button class="btn-registrar">Registrate</button>
-                    <h2>¡Eres el mejor!</h2>
+                    <h2 class="sletrero animated zoomInDown">¡NO DOLOR, NO SUFRIMIENTO!</h2>
                 </div>
             </div>
 
 
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://res.cloudinary.com/db79cecgq/image/upload/c_crop,h_720,w_1440,y_91/c_fill,h_800,w_1600/v1407952710/MejoresCancionesGimnasioNoticias01.jpg');">
+                <div class="fill" style="background-image:url('http://wallpapern.com/wp-content/uploads/2016/05/wallpaper-workout-motivation.jpg');">
                 	<!--<img class="img-responsive fill" src="http://res.cloudinary.com/db79cecgq/image/upload/c_crop,h_720,w_1440,y_91/c_fill,h_800,w_1600/v1407952710/MejoresCancionesGimnasioNoticias01.jpg">-->
                 </div>
                 <div class="carousel-caption">
-                	<button class="btn-registrar">Registrate</button>
-                    <h2>¡Esfuerzate carajo!</h2>
+                    <h2 class="sletrero animated zoomIn">¡NO HAY CUERPO IMPOSIBLE, SI NO MENTE INCAPAZ!</h2>
                 </div>
             </div>
         </div>
