--- a/static/css/full-slider.css
+++ b/static/css/full-slider.css
@@ -1,9 +1,3 @@
-/*
- * Start Bootstrap - Full Slider (http://startbootstrap.com/)
- * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
- */
-
 html,
 body {
     height: 100%;
@@ -31,35 +25,12 @@ body {
     -o-background-size: cover;
 }
 
-footer {
-    margin: 50px 0;
-}
-.btn-registrar {
-  -webkit-border-radius: 10;
-  -moz-border-radius: 10;
-  border-radius: 10px;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 10px;
-  background: #38c215;
-  padding: 10px 20px 10px 20px;
-  border: solid #1dcf29 2px;
-  text-decoration: none;
-}
-
-.btn-registrar:hover {
-  background: #00b023;
-  text-decoration: none;
-}
-
-.letras{
-  font-family: 'FuturaBook', Arial, sans-serif;
-  color: #38c215;
-  font-size: 15pt;
-  margin-top: 15px;
-}
-
-.letras:hover{
- color: #38c215;
- text-decoration: underline;   
+ h2.sletrero{
+  font-family: 'Sarpanch', sans-serif;
+  font-size: 180%;
+  line-height: 1.1;
+  color:white;
+  padding-bottom: 35%;
+  padding-top: 40%;
+  -webkit-animation-duration: 3s;
 }
