--- a/templates/base.html
+++ b/templates/base.html
@@ -2,68 +2,129 @@
 {%load static%}
 
 <html lang="es">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- Bootstrap Core CSS -->
-    <link href="{%static 'css/bootstrap.min.css'%}" rel="stylesheet">
 
-    <!-- Custom CSS -->
-    <link href="{%static 'css/full-slider.css'%}" rel="stylesheet">
-	<title>Fitness Center</title>
-</head>
-<body>
-	 <!-- Navigation -->
-    <nav class="navbar  navbar-transparent  navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand letras" href="#">Fitness Center</a>
+	<head>
+		<title>
+			{%block titulo%}Fitness Center{%endblock titulo%}
+		</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="https://fonts.googleapis.com/css?family=Sarpanch:400,800" rel="stylesheet">
+		<!--Import Google Icon Font-->
+		<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<!-- Bootstrap Core CSS -->
+		<link href="{%static 'css/bootstrap.min.css'%}" rel="stylesheet">
+		<link href="{%static 'css/app.css'%}" rel="stylesheet">
+		<link href="{%static 'css/animate.css'%}" rel="stylesheet">
+		
+		{%block head%} {%endblock head%}
+	</head>
+
+	<body>	
+	<div class="navbar-wraper">
+		<div class="container">
+			<nav class="navbar navbar-default navbar-fixed-top">
+				<div class="container">
+					<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brande animated rollIn " href="#">Fitness Center</a>
+					</div>
+					<div id="navbar" class="navbar-collapse collapse navbar-right" aria-expanded="false" style="height: 1px;">
+					<ul class="nav navbar-nav">
+						<li><a href="#">Inicio</a></li>
+						<li><a href="#about">Clases</a></li>
+						<li><a href="#contact">Horarios</a></li>
+						<li><a href="#prueba">Contácto</a></li>
+						<li><a href="#">Ubicación</a></li>
+					</ul>
+					
+					</div><!--/.nav-collapse -->
+				</div>
+			</nav>
+		</div>
+	</div>
+
+	 	
+
+
+
+	{%block content%}
+	{%endblock content%}
+
+	<div id="footer">
+    <div class="container">
+        <div class="row">
+            <h3 class="footertext">Contácto</h3>
+            
+			<h3 class="footertext">Queremos conocerte</h3>
+            <br>
+			  <div class="col-md-3">
+                <center>
+                  <img src="{%static 'img/github-box.png'%}" class="img-circle animated r" alt="the-brains">
+                </center>
+              </div>
+
+			   <div class="col-md-3">
+                <center>
+                  <img src="{%static 'img/facebook-box.png'%}" class="img-circle animated r" alt="the-brains">
+                </center>
+              </div>
+			  
+              <div class="col-md-3">
+                <center>
+                  <img src="{%static 'img/twitter-box.png'%}" class="img-circle animated r" alt="...">
+                </center>
+              </div>
+			  
+              <div class="col-md-3">
+                <center>
+                  <img src="{%static 'img/linkedin-box.png'%}" class="img-circle animated r" alt="...">
+                </center>
+              </div>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#" class="letras">Clases</a>
-                    </li>
-                    <li>
-                        <a href="#" class="letras">Horarios</a>
-                    </li>
-                    <li>
-                        <a href="#" class="letras">Contácto</a>
-                    </li>
-                    <li>
-                        <a href="#" class="letras">Ubicación</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-
-    {%block content%}
-    
-    
-
-    {%endblock content%}
-
-     <!-- jQuery -->
-    <script src="{%static 'js/jquery.js'%}"></script>
+			<h4 class="footertext">Tel.Cel: 5576345678</h4>
+			<h4 class="footertext">Email: admin@fitnesscenter.com.mx</h4>
+    	</div>
+		<br>
+		<div class="footer1">
+			<div class="container">			
+				<p><center><a href="#" class="footertext">Powered by: Levihan </a>
+				<p class="footertext">Copyright 2016 </p></center></p>
+			</div>
+		</div>
+	</div>
+    <!-- jQuery -->
+    <script src="{%static 'js/jquery-3.1.1.js'%}"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="{%static 'js/bootstrap.min.js'%}"></script>
+	<script>
+		function makeSticky(){
+			var myWindow = $(window),
+				myHeader = $(".navbar");
 
-    {%block scripts%}
-    <!--Block para agregar scripts-->
-    {%endblock scripts%}
-   
+				myWindow.scroll(function(){
+					if (myWindow.scrollTop()==0){
+						myHeader.removeClass("visibles");
+					}else{
+						myHeader.addClass("visibles");
+					}
+				});
+		}
 
-</body>
+		$(function(){
+			makeSticky();
+		});
+	
+	
+	</script>
+	
+	 {%block scripts%}
+	 {%endblock scripts%}
+	</body>
+
 </html>
