--- a/home/templates/menu_admin/menu.html
+++ b/home/templates/menu_admin/menu.html
@@ -10,7 +10,7 @@
 <div  class="container prueba" style="text-align: center">
 		{%if request.user.is_authenticated%}
 		<div class="row" style="padding:50px;">
-			<h1 class="letter_sis">Bienvenido: HUGO </h1>
+			<h1 class="letter_sis">Bienvenido: {{request.user}}</h1>
 			<div class="col-sm-4 col-md-4">
 				<img id="redondo" class="img-rounded" src='{% static "img/account.png" %}'  width="100" height="100">
 				<div class="pieImagen">
@@ -65,7 +65,7 @@
 				 <h1 class="letter_sis"> B I E N V E N I D O</h1>
 				<img id="redondo" class="img-rounded" src='{% static "img/worker.png" %}'  width="150" height="150">
 				<div class="center">
-					<a href="#"><span class="btn_iniciar">Iniciar Sesión</span></a>
+					<a href="{% url "accounts:login" %}"><span class="btn_iniciar">Iniciar Sesión</span></a>
 				</div>
 			</div>
 		</div>		
