--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,18 +1,25 @@
-{% extends 'base.html' %}
+{%extends 'base_sis.html' %} 
 {% load static %}
 
 {%block content%}
 
-	{% if form.erros %}
-		<h2>Tu usuario y contraseña no concuerdan, por favor intentalo nuevamente.</h2>
-	{% else %}
-		<h2>Ingresa con tu nombre de usuario y contraseña</h2>
-	{% endif %}
 
-	<form action="{%url 'accounts:login'%}" method="post">
-		{%csrf_token%}
-		{{form.as_p}}
-		<input type="hidden" name="next" value="{{next}}">
-		<input type="submit" name="submit" value="Iniciar Sesión">
-	</form>	
+<div class="cont_login">
+		{% if form.erros %}
+			<h2 class="letter_sis">Tu usuario y contraseña no concuerdan, por favor intentalo nuevamente.</h2>
+		{% else %}
+			<h2 class="letter_sis">Iniciar Sesión</h2>
+		{% endif %}
+
+		<form action="{%url 'accounts:login'%}" method="post" class="login">
+			{%csrf_token%}
+			{{form.as_p}}
+			<input type="hidden" name="next" value="{{next}}">
+			<input type="submit" name="submit" value="Iniciar Sesión">
+		</form>
+</div>
 {%endblock content%}
+
+
+
+  
