--- a/accounts/templates/registration/registry_admin.html
+++ b/accounts/templates/registration/registry_admin.html
@@ -1,12 +1,14 @@
-{%extends 'base.html'%}
+{%extends 'base_sis.html' %} 
 {%load static%}
 
 {%block content%}
-	<h1> Registro de administradores</h1>
-	<form method="post" action=".">
+<div class="cont_login">		
+	<h1 class="letter_sis"> Registro de administradores</h1>
+	<form method="post" action="." class="login">
 		{%csrf_token%}
 		{{form.as_p}}
 		{{form_adm.as_p}}
 		<input type="submit" name="registroAdm">
 	</form>
+</div>
 {%endblock content%}
