--- a/static/css/base_sis.css
+++ b/static/css/base_sis.css
@@ -64,6 +64,35 @@ div.navbar-collapse.collapse.navbar-right ul li a:hover{
     color:green;
 }
 
+.cont_login{
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 15px;
+    position: absolute;
+    left: 0;
+    top: 15%;
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+}
+
+.login{
+    background-color: transparent;
+    border-radius: 12px;
+    border:3px solid seagreen;
+    color: limegreen;
+    margin-right: 250px;
+    margin-left: 250px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+.form_login{
+    padding-top: 20px;
+    color: seagreen;
+}
 /*****************************************/
 
 
