--- a/templates/base_sis.html
+++ b/templates/base_sis.html
@@ -15,6 +15,8 @@
 		<link href="{%static 'css/bootstrap.min.css'%}" rel="stylesheet">
 		<link href="{%static 'css/base_sis.css'%}" rel="stylesheet">
 		<link href="{%static 'css/animate.css'%}" rel="stylesheet">
+		<link href="{%static 'css/base_shop.css'%}" rel="stylesheet">
+
 		
 		{%block head%} {%endblock head%}
 	</head>
@@ -56,11 +58,6 @@
 	{%block content%}
 
 	{%endblock content%}
-    <div id="footer">
-         <div class="footer_down">
-         <p class="muted credit"><center> Copyright 2016  Fitness Center Powered by: Levihan</center></p>
-        </div>
-    </div>
     <!-- jQuery -->
     <script src="{%static 'js/jquery-3.1.1.js'%}"></script>
 
