--- a/templates/shop_product/shop_product.html
+++ b/templates/shop_product/shop_product.html
@@ -8,12 +8,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>{% block title%} Products {%endblock%} </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="{% static "css/base.css"%}">
+        <link rel="stylesheet" href="{% static "css/base_shop.css"%}">
 
     </head>
     <body>
         <div id = "header">
-            <a href="/" class="logo">Products</a>
+            <a href="/" class="logo">Productos</a>
         </div>
         <div id="subheader">
             <div class="cart">
