--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -55,6 +55,6 @@
     </table>
     <p class="text-right">
         <a href="{% url "shop_product:product_list" %}" class="button light">Continue shopping</a>
-        <a href="#" class="button">Pagar</a>
+        <a href="{% url "orders:order_create" %}" class="button">Pagar</a>
     </p>
 {% endblock %}
