--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brande animated rollIn " href="#">Fitness Center</a>
+					<a class="navbar-brande animated rollIn " href="#">Sport Center</a>
 					</div>
 					<div id="navbar" class="navbar-collapse collapse navbar-right" aria-expanded="false" style="height: 1px;">
 					<ul class="nav navbar-nav">
@@ -94,7 +94,7 @@
 		<div class="footer1">
 			<div class="container">			
 				<p><center><a href="#" class="footertext">Powered by: Levihan </a>
-				<p class="footertext">Copyright 2016 </p></center></p>
+				<p class="footertext">&copy; 2017 </p></center></p>
 			</div>
 		</div>
 	</div>
