--- a/home/templates/menu_admin/menu.html
+++ b/home/templates/menu_admin/menu.html
@@ -44,7 +44,7 @@
 			</div>
 
 			<div class="col-sm-4 col-md-4">
-				<a href="{%url 'shop_product:product_list'%}">
+				<a href="{%url 'courses:list'%}">
 				<img id="redondo" class="img-rounded" src='{% static "img/bookmark.png" %}'  width="100" height="100">
 				<div class="pieImagen">
 					<span class="pie_img">Clases</span>
