Cambios Hugo Filtros de perfil

--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -4,7 +4,7 @@
 {%block content%}
 
 
-<div class="cont_login">
+<div class="cont_login text-center" style="padding-top: 150px;">
 		{% if form.erros %}
 			<h2 class="letter_sis">Tu usuario y contraseña no concuerdan, por favor intentalo nuevamente.</h2>
 		{% else %}
