--- a/accounts/templates/registration/profile.html
+++ b/accounts/templates/registration/profile.html
@@ -39,7 +39,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-12 col-lg-12 text-center">
-					<a href="{% url 'accounts:list-client'%}">
+					<a href="{% url 'accounts:list-client' 'void'%}">
 						<button class="btn btn-primary">Gestionar Clientes</button>
 					</a>
 				</div>
