--- a/templates/shop_product/product/product_list.html
+++ b/templates/shop_product/product/product_list.html
@@ -29,10 +29,15 @@
         {% for product in products %}
             <div class="item">
                 <a href="{{ product.get_absolute_url }}">
-                    <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/404.jpg" %}{% endif %}">
-                </a>
+                    <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/404.jpg" %}{% endif %}" style="width: 150px; height: 150px;">
+                </a><br>
                 <a href="{{ product.get_absolute_url }}">{{ product.name }}</a><br>
                 ${{ product.price }}
+                {% if product.available%}
+                <p class="label label-success">Disponible</p>
+                {%else %}
+                <p class="label label-danger">No Disponible</p>
+                {%endif%}
             </div>
         {% endfor %}
     </div>
