--- a/accounts/templates/registration/profile.html
+++ b/accounts/templates/registration/profile.html
@@ -2,7 +2,7 @@
 
 {%load static%}
 
-{% block content %}
+{% block sis %}
 	
 	<div style="padding-top: 150px">
 
@@ -48,4 +48,4 @@
 
 	</div>
 	
-{% endblock content %}
+{% endblock sis %}
