--- a/courses/templates/courses/course_form.html
+++ b/courses/templates/courses/course_form.html
@@ -6,7 +6,7 @@
 <link href="{% static 'css/class.css'%}" rel="stylesheet">
 <link href="{% static 'css/center.css'%}" rel="stylesheet">
 {%endblock head%}
-{% block content %}
+{% block sis %}
 <div class="container" style="padding-top: 100px;">     
     <div class="row">
         <div class="col-sm-6 col-sm-offset-3 bg-success">
@@ -23,4 +23,4 @@
          </div>
     </div>
 </div>
-{%endblock content%}
+{%endblock sis%}
