--- a/courses/templates/courses/course_list.html
+++ b/courses/templates/courses/course_list.html
@@ -6,7 +6,7 @@
     <link href="{% static 'css/class.css'%}" rel="stylesheet">
 {%endblock head%}
 
-{% block content %}
+{% block sis%}
 <div style="padding-top: 50px;"> 
     <div class="text-center">      
         <h1>Clases</h1>
@@ -50,4 +50,4 @@
         </div>
     </div>
 </div>
-{% endblock content%}
+{%endblock sis%}
