--- a/accounts/templates/registration/detail_client.html
+++ b/accounts/templates/registration/detail_client.html
@@ -1,7 +1,7 @@
 {% extends 'base_sis.html'%}
 {% load static%}
 
-{% block content %}
+{% block sis %}
 	<div style="padding-top: 50px;">
 		<div class="text-center strong">
 			<h1 class="page-header">Detalle Cliente</h1>
@@ -43,4 +43,4 @@
 			</div>
 		</div>
 	</div>
-{% endblock content %}
+{% endblock sis%}
