--- a/accounts/templates/registration/list-client.html
+++ b/accounts/templates/registration/list-client.html
@@ -1,8 +1,7 @@
 {% extends 'base_sis.html' %}
-
 {%load static%}
-
-{%block content%}
+{% include "sidebar_sis.html" %}
+{%block sis%}
 	<div style="padding-top: 150px;">
 		<div class="text-center strong"><h1>Lista de Clientes</h1></div>
 		<div class="container">
@@ -82,4 +81,4 @@
 		</div>
 	</div>
 
-{%endblock content%}
+{%endblock sis%}
