--- a/accounts/templates/registration/logged_out.html
+++ b/accounts/templates/registration/logged_out.html
@@ -1,10 +1,10 @@
 {%extends 'base_sis.html'%}
 {%load static%}
 
-{% block content %}
+{% block sis %}
 	<h2>Tu sesión se ha cerrado con exito</h2>
 	<h2>Iniciar sesión nuevamente: </h2>
 	<a href="{%url 'accounts:login'%}">
 		<button>Entrar</button>
 	</a>
-{% endblock content %}
+{% endblock sis%}
