--- a/accounts/templates/registration/registry_client.html
+++ b/accounts/templates/registration/registry_client.html
@@ -1,14 +1,15 @@
 {%extends 'base_sis.html'%}
+{% load crispy_forms_tags%}
 {%load static%}
 
-{% block content%}
+{% block sis%}
 	<div style="padding-top: 50px;">
 	<h1>Registro de Clientes</h1>
 	<form action="." method="post" enctype='multipart/form-data'>
 		{%csrf_token%}
-		{{form.as_p}}
-		{{form_usc.as_p}}
+		{{form|crispy}}
+		{{form_usc|crispy}}
 		<input type="submit" name="submitclient" value="Registrar Cliente">
 	</form>
 	</div>
-{% endblock content%}
+{% endblock sis%}
