--- a/courses/templates/courses/course_confirm_delete.html
+++ b/courses/templates/courses/course_confirm_delete.html
@@ -5,7 +5,7 @@
 {%block head%}
     <link href="{% static 'css/class.css'%}" rel="stylesheet">
 {%endblock head%}
-{% block content %}
+{% block sis %}
 
 <div style="padding-top: 50px;">
     <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
@@ -35,4 +35,4 @@
                 </div> 
         </div>
 
-{% endblock content%}
+{% endblock sis%}
