--- a/templates/base_sis.html
+++ b/templates/base_sis.html
@@ -66,8 +66,8 @@
 		<div class="row">
 			<div class="col-sm-3 col-md-2 sidebar">
 				<ul class="nav nav-sidebar profile">
-					<li><img src="img/ivan.jpg"  class="img-circle photo_perfil" height="80" width="80"></li>
-					<li><h2>Usuario: Ivan</h2></li>
+					<li><img src={% static "img/1.jpg" %}  class="img-circle photo_perfil" style="width: 100px; height: 100px;"></li>
+					<li><h2>{{request.user}}</h2></li>
 				</ul>
 				<ul class="nav nav-sidebar">
 					<li class="active"><a href="{% url 'accounts:list-client' 'void'%}">Clientes</a></li>
