--- a/templates/base_sis.html
+++ b/templates/base_sis.html
@@ -31,7 +31,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand animated rollIn " id="nav-brand" href="{% url 'home' %}">Sport Center</a>
+					<a class="navbar-brand" id="nav-brand" href="{% url 'home' %}">Sport Center</a>
 					</div>
 					<div id="navbar" class="navbar-collapse collapse navbar-right" aria-expanded="false" style="height: 1px;">
 					<ul class="nav navbar-nav">
