--- a/templates/base_sis.html
+++ b/templates/base_sis.html
@@ -45,7 +45,7 @@
 						<ul class="dropdown-menu" style="background: seagreen;">
 							<li><a href="{% url 'accounts:list-client' 'void'%}">Clientes</a></li>
 							<li><a href="{%url 'shop_product:product_list'%}">Productos</a></li>
-							<li><a href="#">Visitas</a></li>
+							<li><a href="">Visitas</a></li>
 							<li><a href="{%url 'courses:list'%}">Clases</a></li>
 							<li><a href="#">Reportes</a></li>
 						</ul>
