--- a/templates/404.html
+++ b/templates/404.html
@@ -8,7 +8,11 @@
 {%endblock head%}
 
 {% block sis%}
-            <div class="continer">
-                <h2>NOt FOund 404</h2>
+    <div class="container" style="padding-top:5px; padding-left: 5px;padding-right: 5px;padding-bottom: 5px;">
+        <div class="row">
+            <div class="col-sm-6 col-sm-offset-3 bg-danger">
+                <img src="https://images.alphacoders.com/476/476980.png" alt="" class="img-responsive">
             </div>
+        </div>        
+    </div>
 {%endblock sis%}
