--- a/accounts/templates/registration/registry_client.html
+++ b/accounts/templates/registration/registry_client.html
@@ -3,13 +3,35 @@
 {%load static%}
 
 {% block sis%}
-	<div style="padding-top: 50px;">
-	<h1>Registro de Clientes</h1>
-	<form action="." method="post" enctype='multipart/form-data'>
-		{%csrf_token%}
-		{{form|crispy}}
-		{{form_usc|crispy}}
-		<input type="submit" name="submitclient" value="Registrar Cliente">
-	</form>
-	</div>
+	{% if request.user.user_clien %}
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<div style="padding-top: 50px;">
+					<h1>Registro de Clientes</h1>
+					<form action="." method="post" enctype='multipart/form-data'>
+						{%csrf_token%}
+						{{form_usc|crispy}}
+						{{form|crispy}}
+						<input type="submit" name="submitclient" value="Registrar Cliente">
+					</form>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	{% else %}
+
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<div class="alert alert-danger">
+						<h3>Necesitas ser Administrador para poder ver esta página</h3>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	{% endif %}
+
 {% endblock sis%}
