--- a/accounts/templates/registration/list-client.html
+++ b/accounts/templates/registration/list-client.html
@@ -3,7 +3,7 @@
 {% include "sidebar_sis.html" %}
 {%block sis%}
 	<div style="padding-top: 150px;">
-		{% if request.user.user_clien %}
+		{% if request.user.user_admin %}
 					<div class="text-center strong"><h1>Lista de Clientes</h1></div>
 			<div class="container">
 				<div class="row">
