--- a/accounts/templates/registration/registry_client.html
+++ b/accounts/templates/registration/registry_client.html
@@ -3,7 +3,7 @@
 {%load static%}
 
 {% block sis%}
-	{% if request.user.user_clien %}
+	{% if request.user.user_admin %}
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
