--- a/accounts/templates/registration/detail_client.html
+++ b/accounts/templates/registration/detail_client.html
@@ -36,7 +36,7 @@
 								{{ user_form.as_p }}
 								<br><br>
 								<div class="text-center">
-									<input class="btn btn-primary btn-lg" type="Submit" name="Guardar" placeholder="Guardar Información">
+									<input class="btn btn-primary btn-lg" type="submit" name="Guardar" placeholder="Guardar Información">
 								</div>
 							</div>
 						</form>
