se agregaron los cambios de detail client

--- a/accounts/templates/registration/detail_client.html
+++ b/accounts/templates/registration/detail_client.html
@@ -30,14 +30,13 @@
 							{% endif %}
 						</h1>
 						<h3 class="strong text-center">Información sobre el cliente</h3>
-						<form role="form" action="." method="post" enctype='multipart/form-data'>
-							<div class="form-group">
-								{%csrf_token%}
-								{{ user_form.as_p }}
-								<br><br>
-								<div class="text-center">
-									<input class="btn btn-primary btn-lg" type="submit" name="Guardar" placeholder="Guardar Información">
-								</div>
+						<form action="." method="post" enctype='multipart/form-data'>
+							{%csrf_token%}
+							{{ user_form.as_p }}
+							<br><br>
+							olo
+							<div class="text-center">
+								<input type="submit" class="btn btn-primary btn-lg" name="enviar" value="Enviarrrrrrrr">
 							</div>
 						</form>
 					</div>
@@ -55,4 +54,4 @@
 			</div>
 		{% endif %}
 	</div>
-{% endblock sis%}4
+{% endblock sis%}
