--- a/accounts/templates/registration/logged_out.html
+++ b/accounts/templates/registration/logged_out.html
@@ -6,12 +6,14 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 div col-md-offset-2">
-				<h2 class="text-center">Tu sesión se ha cerrado con exito</h2>
+				<h2 class="user_detail text-center">Tu sesión se ha cerrado con exito</h2>
 				<hr>
-				<h3>Iniciar sesión nuevamente: </h3>
+				<h3 class="user_detail text-center">¡Vuelve pronto campeón!</h3>
+				<hr>
+				<h5 class="user_detail text-center">Iniciar sesión nuevamente: </h5>
 				<div class="text-center">
-					<a href="{%url 'accounts:login'%}" class="btn btn-success btn-lg">
-						Entrar
+					<a href="{%url 'accounts:login'%}" class="btn btn-success btn-info">
+						Iniciar sesión
 					</a>
 				</div>
 			</div>
