--- a/accounts/templates/registration/password_reset_done.html
+++ b/accounts/templates/registration/password_reset_done.html
@@ -9,10 +9,11 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1">
-				<h2>Restaurar tu contraseña</h2>
+				<h2 class="user_detail text-jusify">Restaurar tu contraseña</h2>
 				<div class="text-jusify">
 					<p>Hemos enviado a su correo las instrucciones necesarias para que pueda configurar su nueva contraseña.</p>
 					<p>Sí no recibe un correo electrónico, asegurese de haber ingresado el correo con el que se registro.</p>
+					<a href="{% url 'accounts:login'%}" class="btn btn-info">Iniciar Sesión</a>
 				</div>
 			</div>
 		</div>
