--- a/accounts/templates/registration/password_reset_form.html
+++ b/accounts/templates/registration/password_reset_form.html
@@ -8,13 +8,13 @@
 {% block content %}
 	<div class="container">
 		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
-				<h2>¿Olvidaste tu contraseña?</h2>
+			<div class="col-md-8 col-md-offset-2 text-center">
+				<h2 class="user_detail text-center"><i class="fa fa-key" aria-hidden="true"></i> ¿Olvidaste tu contraseña?</h2>
 				<p>Ingresa tu correo electronico para obtener una nueva contraseña.</p>
 				<form action="." method="post">
 					{{ form.as_p }}
 					{% csrf_token %}
-					<input type="submit" name="submit" class="btn btn-primary" value="Enviar correo">
+					<input type="submit" name="submit" class="btn btn-info" value="Enviar correo">
 				</form>
 
 			</div>
