--- a/static/css/new_sis.css
+++ b/static/css/new_sis.css
@@ -1,28 +1,188 @@
 #nav {
-     background-color:seagreen;
+     background-color:#4db6ac;
      border-style: hidden;
 }
 
 #nav-brand{
     color: white;
+    font-family: 'Ubuntu';
 }
 
 #nav-brand:hover{
-    color: lime;
+    color: #31708f;
 }
 
 div.navbar-collapse.collapse.navbar-right ul li a{
     color: white;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 div.navbar-collapse.collapse.navbar-right ul li a:hover{
-    color:lime;
+    color:#31708f;
 }
 
-img.photo_perfil{
-    width: 25px;
-    height: 25px;
-}
 .user{
-     font-weight:bold;
+    color: white;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.user_detail{
+    color: #31708f;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.profile_img{
+    /*background-image: url(../img/py.png);*/
+    background-size: cover;
+    margin: 0 auto;
+    border: 4px solid gainsboro;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    padding: 5px;
+}
+
+
+/*Cards Clientes*/
+.cardBox {
+  float: left;
+  font-size: 1.0em;
+  margin: 1% 0 0 1%;
+  perspective: 800px;
+  transition: all 0.3s ease 0s;
+  width: 32%;
+}
+
+.cardBox:hover .card {
+  transform: rotateY( 180deg);
+}
+
+.card {
+  background: #4db6ac ;
+  cursor: default;
+  height: 300px;
+  transform-style: preserve-3d;
+  transition: transform 0.4s ease 0s;
+  width: 100%;
+  -webkit-animation: giro 1s 1;
+  animation: giro 1s 1;
+}
+
+.card p {
+  margin-bottom: 1.0em;
+}
+
+.card .front,
+.card .back {
+  backface-visibility: hidden;
+  box-sizing: border-box;
+  color: white;
+  display: block;
+  font-size: 1.0em;
+  height: 100%;
+  padding: 0.7em;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+}
+
+.card .front strong {
+  background: #27ae60;
+  border-radius: 100%;
+  color: #27ae60;
+  font-size: 1.5em;
+  line-height: 30px;
+  padding: 0 7px 4px 6px;
+}
+
+.card .back {
+  transform: rotateY( 180deg);
+}
+
+.card .back a {
+  padding: 0.3em 0.5em;
+  /*background: #333;*/
+  color: #fff;
+  text-decoration: none;
+  border-radius: 1px;
+  font-size: 0.9em;
+  transition: all 0.2s ease 0s;
+}
+
+.card .back a:hover {
+  background: #fff;
+  color: #333;
+  text-shadow: 0 0 1px #333;
+}
+
+.cardBox:nth-child(1) .card .back {
+  background: cornflowerblue;
+}
+
+.cardBox:nth-child(2) .card .back {
+  background: orange;
+}
+
+.cardBox:nth-child(3) .card .back {
+  background: yellowgreen;
+}
+
+.cardBox:nth-child(4) .card .back {
+  background: tomato;
+}
+
+.cardBox:nth-child(2) .card {
+  -webkit-animation: giro 1.5s 1;
+  animation: giro 1.5s 1;
+}
+
+.cardBox:nth-child(3) .card {
+  -webkit-animation: giro 2s 1;
+  animation: giro 2s 1;
+}
+
+.cardBox:nth-child(4) .card {
+  -webkit-animation: giro 2.5s 1;
+  animation: giro 2.5s 1;
+}
+
+@-webkit-keyframes giro {
+  from {
+    transform: rotateY( 180deg);
+  }
+  to {
+    transform: rotateY( 0deg);
+  }
+}
+
+@keyframes giro {
+  from {
+    transform: rotateY( 180deg);
+  }
+  to {
+    transform: rotateY( 0deg);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cardBox {
+    margin-left: 2.8%;
+    margin-top: 3%;
+    width: 46%;
+  }
+  .card {
+    height: 285px;
+  }
+  .cardBox:last-child {
+    margin-bottom: 3%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .cardBox {
+    width: 94.5%;
+  }
+  .card {
+    height: 260px;
+  }
 }
