--- a/accounts/templates/registration/profile.html
+++ b/accounts/templates/registration/profile.html
@@ -3,50 +3,20 @@
 {%load static%}
 
 {% block sis %}
-	
-	<div style="padding-top: 150px">
 
-		<div class="page-header text-center">
-			<h1>Perfil</h1>
-		</div>
-
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12 col-md-6 col-lg-6">
-					<div class="col-md-8 col-md-offset-2">
-						<img src="{{adm.photo.url}}" alt="photo_admin" class="img-responsive img-circle" style="width: 50%">
-					</div>
-				</div>
-				<div class="col-sm-12 col-md-6 col-lg-6">
-					<h1 class="text-center"><span class="label label-success">Bienvenido A Tu Perfil Administrador</span></h1>
-					<p>
-						<div class="text-center">
-							<table class="table">
-								<tr class="success">
-									<td>
-										<h2>{{request.user.first_name}}</h2>
-										<h2>{{request.user.last_name}}</h2>
-										<h3>Correo: {{request.user.email}}</h3>
-									</td>
-								</tr>
-							</table>
-						</div>
-					</p>
-				</div>
-			</div>
-		</div>
-		<br>
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12 col-md-12 col-lg-12 text-center">
-					<a href="{% url 'accounts:list-client'%}">
-						<button class="btn btn-primary">Gestionar Clientes</button>
-						<a href="{% url 'accounts:password_change'%}" class="btn btn-warning">Cambiar contraseña</a>
-					</a>
-				</div>
-			</div>
-		</div>
-
+	<div class="container col-lg-10 col-md-10" style="padding: 50px;">
+            <div class="row">
+                <div class="col-lg-10 col-md-10 col-sm-10 col-lg-offset-2 text-center" >
+                    <h2 class="user_detail text-center">¡Bienvenido Administrador!</h2>
+					<div><img src="{% if adm.photo %}{{adm.photo.url}}{%else%} {%static "img/small.png"%}{%endif%}" class="profile_img"></div>
+                    <h3 class="text-center">{{request.user.first_name}}</h3>
+                    <h3 class="text-center">{{request.user.last_name}}</h3>
+					<p class="text-center"><i class="fa fa-user" aria-hidden="true"> : {{ request.user.username }}</i></p>
+                    <p class="text-center"><i class="fa fa-envelope" aria-hidden="true"> : {{request.user.email}}</i></p>
+					<p class="text-center"><i class="fa fa-mobile" aria-hidden="true"> : 5551765406</i></p>
+					<a href="{% url 'accounts:password_change'%}" class="btn btn-warning">Cambiar contraseña</a>                        
+                    
+                </div>
+            </div>
 	</div>
-	
 {% endblock sis %}
