--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -47,7 +47,7 @@ body {
     padding-bottom: 20px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #A5D6A7;
+    background-color: #4db6ac;
     border-right: 1px solid #eee;
   }
 }
@@ -58,20 +58,33 @@ body {
   margin-bottom: 20px;
   padding-top: 5px;
   margin-left: -20px;
+  color: white;
+  font-family: 'Ubuntu', sans-serif;
+}
+.nav-sidebar > li {
+  text-align: center;
 }
 .nav-sidebar > li > a {
   padding-right: 20px;
   padding-left: 20px;
+  color: white;
+  
 }
+
+.nav-sidebar > li > a:hover {
+  color: #ffffff;
+  background-color: #31708f;
+}
+
 .nav-sidebar > .active > a,
 .nav-sidebar > .active > a:hover,
 .nav-sidebar > .active > a:focus {
-  color: #FFFFFF;
-  background-color: #00E676;
+  color: #ffffff;
+  background-color: #00897b;
 }
 
 .profile{
-  background-color: #4CAF50;
+  background-color: #26a69a;
 }
 /*
  * Main content
