--- a/templates/base_sis.html
+++ b/templates/base_sis.html
@@ -8,7 +8,9 @@
 		</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Sarpanch:400,800" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Ubuntu:700i" rel="stylesheet">
 		<!--Import Google Icon Font-->
+		<link href="{%static 'font-awesome/css/font-awesome.min.css'%}" rel="stylesheet" type="text/css">
 		<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<!-- Bootstrap Core CSS -->
 		<link href="{%static 'css/bootstrap.min.css'%}" rel="stylesheet">
@@ -36,13 +38,13 @@
 					<div id="navbar" class="navbar-collapse collapse navbar-right" aria-expanded="false" style="height: 1px;">
 					<ul class="nav navbar-nav">
 						{%if request.user.is_authenticated%}
-						<li><a href="{% url "accounts:logout" %}">Cerrar  Sesión</a></li>
+						<li><a href="{% url "accounts:logout-then-login" %}">Cerrar  Sesión</a></li>
 						<li class="btn-group" role="group">		
 						<button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-top: 8px;">
 							Menu
 						<span class="caret"></span>
 						</button>
-						<ul class="dropdown-menu" style="background: seagreen;">
+						<ul class="dropdown-menu" style="background: #4db6ac;">
 							<li><a href="{% url 'accounts:list-client' %}">Clientes</a></li>
 							<li><a href="{%url 'shop_product:product_list'%}">Productos</a></li>
 							<li><a href="#">Visitas</a></li>
@@ -52,7 +54,7 @@
 						</li>
 						
 						{%else%}
-						<li><a href="{% url "accounts:login" %}">Iniciar Sesión</a></li>
+						
 						{%endif%}
 					</ul>
 					</div><!--/.nav-collapse -->
@@ -66,19 +68,21 @@
 		<div class="row">
 			<div class="col-sm-3 col-md-2 sidebar">
 				<ul class="nav nav-sidebar profile">
-					<li><img src="{{ request.user.user_clien.photo.url }}"  class="img-circle photo_perfil" height="80" width="80"></li>
-					<li><h2>{{ request.user.username }}</h2></li>
+					<li><img src="{{ request.user.user_admin.photo.url }}" class="profile_img"></li>
+					<li><a href="{% url 'accounts:profile'%}"><h2 class="user text-center">Admin {{ request.user.username }}</h2></a></li>
+					<li><p>{{request.user.email}}</p></li>
 				</ul>
 				<ul class="nav nav-sidebar">
-					<li class="active"><a href="{% url 'accounts:list-client'%}">Clientes</a></li>
-					<li><a href="{%url 'shop_product:product_list'%}">Productos</a></li>
-					<li><a href="#">Visitas</a></li>
-					<li><a href="{%url 'courses:list'%}">Clases</a><li>
-					<li><a href="#">Reportes</a></li>
+					<li><a href="{% url 'accounts:list-client'%}"><i class="fa fa-users"> </i> Clientes</a></li>
+					<li><a href="{%url 'shop_product:product_list'%}"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Productos</a></li>
+					<li><a href="#"><i class="fa fa-male" aria-hidden="true"></i> Visitas</a></li>
+					<li><a href="{%url 'courses:list'%}"><i class="fa fa-heart" aria-hidden="true"></i> Clases</a><li>
+					<li><a href="#"><i class="fa fa-pie-chart" aria-hidden="true"></i> Reportes</a></li>
 				</ul>			
 			</div>
-			<div  class="col-sm-9 col-offset-3 col-md-10 col-md-offset-2 ">
+			<div  class="col-sm-9 col-offset col-md-10 col-md-offset-2">
 					{%block sis%}
+
 					{%endblock sis%}
                     
 			</div>		
